Final edits for Project 1

--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 
 <meta name="author" content="Karl Abuan" />
 <meta name="author" content="May Ho" />
-<meta name="author" content="Jonah Lin" />
+<meta name="author" content="Wei Ting Lin (Jonah)" />
 <meta name="author" content="Leilynaz Malekafzali" />
 <meta name="author" content="Tiffany Yang" />
 <meta name="author" content="Abdur Rahman M. A. Basher" />
 
-<meta name="date" content="2018-04-24" />
+<meta name="date" content="2018-04-25" />
 
 <title>Module 3: Project 1 by Team 5</title>
 
@@ -242,11 +242,11 @@ div.tocify {
 <h3 class="subtitle"><em>Mothur vs. QIIME2 Microbiome Data Analysis</em></h3>
 <h4 class="author"><em>Karl Abuan</em></h4>
 <h4 class="author"><em>May Ho</em></h4>
-<h4 class="author"><em>Jonah Lin</em></h4>
+<h4 class="author"><em>Wei Ting Lin (Jonah)</em></h4>
 <h4 class="author"><em>Leilynaz Malekafzali</em></h4>
 <h4 class="author"><em>Tiffany Yang</em></h4>
 <h4 class="author"><em>Abdur Rahman M. A. Basher</em></h4>
-<h4 class="date"><em>April 24, 2018</em></h4>
+<h4 class="date"><em>April 25, 2018</em></h4>
 <div class="abstract">
 <p class="abstract">Abstract</p>
 <p>Saanich Inlet is an intermittently anoxic fjord on the coast of Vancouver Island, and it is commonly used as a model system for analyzing microbial community response to ocean deoxygenation. A portion of 16S sequence data from Saanich Inlet were collected at various depths and were analyzed to estimate diversity and examine microbial abundance with respect to varying depths and oxygen levels. The analysis of pre-processed OTUs and ASVs - generated through Mothur and QIIME2 pipeline tools, respectively - showed that the community alpha-diversity values peaked at depths 10m and 100m and a minimum value was achieved at 200m. Further analysis of taxonomic levels showed that the phylum Proteobacteria was found to be the most abundant phylum among all samples. We used the genus <em>Planctomyces</em> to further examine how microbial communities change across various depths and the oxygen gradient in Saanich Inlet. Analysis revealed that abundance of <em>Planctomyces</em> had no relationship with varying depths nor oxygen concentration in datasets derived from both Mothur or QIIME2. The analysis of data using QIIME2 revealed four genera within the phylum Planctomycetes (<em>Candidatus_Scalindua</em>, <em>D_5_JL_ETNP_F27</em>, <em>FS140_16B_02_marine_group</em>, <em>D_5_Planctomyces</em>), while Mothur identified one extra genus in addition to those identified by QIIME2: <em>Pla3_lineage_ge</em>. The abundances of the OTUs and ASVs within the <em>Planctomyces</em> genus did not change significantly differ across depth and oxygen concentration.</p>
